--- a/css/theme.default.css
+++ b/css/theme.default.css
@@ -7,7 +7,7 @@ Default Theme
 	font: 12px/18px Arial, Sans-serif;
 	color: #333;
 	border-spacing: 0;
-	margin: 10px 0 15px;
+	margin: 10px 10px 15px;
 	text-align: left;
 }
 
